Added my Resume

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@ assistant in <a href="https://private.sice.indiana.edu/">Privacy Lab </a>  under
 						</div>
                        
                         <div class="full">
-                            <strong:>Download: </strong> <a href="">Curriculum Vitae</a>
+                            <strong:>Download: </strong> <a href="./docs/resume_research.pdf">Curriculum Vitae</a>
                         </div>
 						<div class="full">
 						  <h5>Recent News</h5>
